# shenhe_main

./: .gitignore  README.md  debug.py  main.db-journal  pm2.json  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run.py
.github/workflows/: ruff-lint.yml
apps/: RollApp.py  flow.py  giveaway.py  music.py  musicApp.py  roll.py  shop.py
apps/c4/: __init__.py  exceptions.py  game.py  ui.py
archived/: emoji_stats.py  music.py  no_scam.py  pomice.py  roll.py  roll_app.py  text_forum.py  trpg.py  vote.py  webhooks.py  zzz_status.py
assets/: constants.py
cogs/: admin.py  april_fool.py  connect_four.py  dance.py  emoji_stats.py  find.py  fish.py  flow.py  game.py  guess_num.py  gv.py  gvaway.py  help.py  image_manager.py  level.py  minecraft.py  music.py  no_scam.py  no_spam.py  othercmd.py  poll.py  pomice.py  roles.py  roll.py  saucenao.py  schedule.py  shop.py  text_forum.py  trpg.py  voice.py  vote.py  webhooks.py  welcome.py  zzz_status.py
data/: constants.py
data/fish/: fish_data.py
data/roll/: banner.py  cutscenes.py
dev/: enum.py  model.py
ui/: guess_num.py  welcome.py
utility/: draw.py  paginator.py  utils.py
utility/apps/: FlowApp.py  RoleApp.py
utility/paginators/: GeneralPaginator.py  TutorialPaginator.py  paginator.py
