[project]
name = "shenhe-main"
requires-python = ">=3.11"

[tool.poetry]
authors = ["seriaati <seria.ati@gmail.com>"]
description = ""
license = "MIT"
name = "shenhe-main"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpg = "^0.29.0"
discord-py = "^2.3.2"
jishaku = "^2.5.2"
pillow = "^10.2.0"
pomice = "^2.9.0"
pydantic = "^2.5.2"
pysaucenao = "^1.6.2"
python = "^3.11"
python-dotenv = "^1.0.0"
seria-library = "^1.5.4"
loguru = "^0.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
